--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,32 @@
 {
-    "manifest_version": 3,
-    "name": "Redirect",
-    "version": "1.0",
-    "description": "Redirection d'une page souhaitée vers une autre",
-    "permissions": [
-        "scripting",
-        "activeTab"
-    ],
-    "action": {
-        "default_popup": "popup.html"
+  "manifest_version": 3,
+  "name": "Redirecteur de Liens",
+  "version": "1.0",
+  "description": "Redirige automatiquement certains liens vers d'autres, selon vos choix.",
+  "permissions": [
+    "storage",
+    "tabs",
+    "webNavigation"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "32": "icon32.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
     }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
